[package]
name = "term_manager"
version = "0.1.3"
edition = "2024"
description = "Wrapper around libc::termios for fine-grained stdin/stdout control."
license = "MIT"
repository = "https://github.com/sebastian-j-ibanez/repl_suite"
documentation = "https://docs.rs/term_manager/"

[dependencies]
libc = "0.2.175"
nix = "0.30.1"
